refactor: replaced dangerously set innerhtml with js created elements

--- a/options.html
+++ b/options.html
@@ -262,7 +262,7 @@
   </div>
 
   <div id="engine-list" class="engine-list">
-    <div class="no-engines">
+    <div id="engine-list-no-engines" class="no-engines" style="display: none;">
       <p>No custom search engines added yet.</p>
       <p>Click "Add New Engine" to get started.</p>
     </div>
