--- a/popup.html
+++ b/popup.html
@@ -112,6 +112,7 @@
     <input type="text" id="search-input" class="search-input" placeholder="Enter search terms...">
     
     <div id="engine-selector" class="engine-selector">
+      <div id="engine-selector-add" class="empty-state" style="display: none;">No search engines configured. <a href="#" id="add-engine-link">Add one now</a></div>
       <!-- Search engines will be populated here -->
     </div>
   </div>
